# research_agent

./: .env.example  .gitignore  main.py  pyproject.toml
agent/: graph.py  prompts.py  state.py
tools/: reader.py  search.py  writer.py
